# gi

./: Makefile  README.md  categories.py  main.py  message_handler.py  message_marker_archiver.py  pyproject.toml  utils.py
.codelimit_cache/: codelimit.json
explore/: README.md  anon.txt  anonymize.py  anonymize_empty.py  extract_stuff.py  g
mail_api/: abstract_mail_api.py  eml_mail_api.py  mail_api_factory.py  simplegmail_mail_api.py
plugins/: __init__.py  amazon_de_message_handler.py  apfelkiste_message_handler.py  apple_de_message_handler.py  apple_message_handler.py  bird_rides_message_handler.py  bolt_message_handler.py  brack_message_handler.py  buecher_de_message_handler.py  ex_libris_message_handler.py  iway_message_handler.py  kobo_message_handler.py  lehmanns_message_handler.py  lime_message_handler.py  micasa_message_handler.py  moises_message_handler.py  music_store_message_handler.py  musik_hug_message_handler.py  namecheap_heres_your_auto_renewal_message_handler.py  namecheap_important_auto_renewal_message_handler.py  new_york_jazz_workshop_message_handler.py  nzz_live_message_handler.py  nzz_message_handler.py  onedoc_message_handler.py  orell_fuessli_message_handler.py  patreon_message_handler.py  pragprog_message_handler.py  sbb_easyride_message_handler.py  sbb_online_purchase_message_handler.py  tier_message_handler.py
tests/emails/: amazon_Ihre_Amazon.de_Bestellung_von_A_Horse_with_No_Name.eml  apfelkiste_Apfelkiste.ch_Rechnung_Nr._108885097_fuer_Bestellung_Nr._109968429.eml  apple_Your_invoice_from_Apple..eml  kobo_Your_Kobo_Order_Receipt.eml  (+25 more)
